[gd_scene format=3 uid="uid://pause_overlay"]

[ext_resource type="Script" path="res://scripts/ui/pause_overlay.gd" id="1"]

[node name="PauseOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)
mouse_filter = Control.MOUSE_FILTER_IGNORE

[node name="Card" type="Panel" parent="."]
anchor_left = 0.3
anchor_right = 0.7
anchor_top = 0.25
anchor_bottom = 0.75

[node name="VBox" type="VBoxContainer" parent="Card"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 14
alignment = BoxContainer.ALIGNMENT_CENTER

[node name="Title" type="Label" parent="Card/VBox"]
text = "Paused"
horizontal_alignment = HorizontalAlignment.CENTER

[node name="ResumeButton" type="Button" parent="Card/VBox"]
unique_name_in_owner = true
text = "Resume"

[node name="RestartButton" type="Button" parent="Card/VBox"]
unique_name_in_owner = true
text = "Restart Wave"

[node name="OptionsButton" type="Button" parent="Card/VBox"]
unique_name_in_owner = true
text = "Options"

[node name="QuitButton" type="Button" parent="Card/VBox"]
unique_name_in_owner = true
text = "Quit to Menu"
